--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
                 Mon profil
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item" %>
+                <%= link_to "Mon profil", user_path(current_user.id), class: "dropdown-item" %>
                 <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item", method: "DELETE"%>
               </div>
             </li>
