--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -28,7 +28,7 @@
 
         <div class="form-group">
           <label>Date de l'évènement </label>
-          <%= date_field_tag 'start_date', @event.start_date, class: "form-control", placeholder: "DD:MM:YY", type: "date" %>
+          <%= date_field_tag 'start_date', @event.start_date, class: "form-control", placeholder: "DD/MM/YYYY", type: "date" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
           La date de l'évènement au format ci-dessus 
           </small>
