--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -4,7 +4,7 @@
       <br><br><br>
       <h1 class="h3 mb-3 font-weight-normal text-center"> Inscription et règlement de l'évènement </h1>
 
-      <%= form_tag attendances_path do %>
+      <%= form_tag event_attendances_path(@event_id) do %>
         <article class="text-center">
           <% if flash[:error].present? %>
             <div id="error_explanation">
