--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,18 @@
       <br><br><br>
       
       <h1 class="h3 mb-3 font-weight-normal text-center">Détails de l'évènement - <%= @event.title%></h1>
+        <div class="text-center mb-5">
+        <%if @event.event_picture.attached?%>
+          <%= image_tag @event.event_picture, alt: 'event_picture', align: 'middle', width: 570, height: 400 %>
+        <%else%>
+          <p>=== Il n'y a pas encore d'image lié à cet évènement ===</p>
+        <%end%>
+        <h3 class="mt-5 h5 font-weight-normal">Changer d'avatar ?</h3>
+        <%= form_tag event_event_pictures_path(@event), multipart: true do %>
+          <%= file_field_tag :event_picture %>
+          <%= submit_tag "mettre à jour" %>
+        <% end %>
+        </div>  
       
       <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center">
