--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @admin_events.each do |admin_event| %>
       <tr>
+        <td><%= admin_event.title %></td>
         <td><%= link_to 'Show', admin_event %></td>
         <td><%= link_to 'Edit', edit_admin_event_path(admin_event) %></td>
         <td><%= link_to 'Destroy', admin_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
