--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Dashboard Eventbrite - Evénements </title>
+    <title>Dashboard Eventbrite - Utilisateurs </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
 
@@ -82,7 +82,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
 
-          <h2>Les évènements</h2>
+          <h2>Les utilisateurs</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
@@ -94,12 +94,12 @@
                 </tr>
               </thead>
               <tbody>
-                <% @admin_events.each do |admin_event| %>
+                <% @admin_users.each do |admin_user| %>
                 <tr>
-                  <td><%= admin_event.title %></td>
-                  <td><%= link_to 'Show', admin_event %></td>
-                  <td><%= link_to 'Edit', edit_admin_event_path(admin_event) %></td>
-                  <td><%= link_to 'Destroy', admin_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                  <td><%= admin_user.first_name %></td>
+                  <td><%= link_to 'Show', admin_user %></td>
+                  <td><%= link_to 'Edit', edit_admin_user_path(admin_user) %></td>
+                  <td><%= link_to 'Destroy', admin_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                 </tr>
                 <% end %>
               </tbody>
@@ -156,3 +156,31 @@
     </script>
   </body>
 </html>
+
+<!--
+
+<p id="notice"><%= notice %></p>
+
+<h1>Admin Users</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @admin_users.each do |admin_user| %>
+      <tr>
+        <td><%= link_to 'Show', admin_user %></td>
+        <td><%= link_to 'Edit', edit_admin_user_path(admin_user) %></td>
+        <td><%= link_to 'Destroy', admin_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Admin User', new_admin_user_path %>
