--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -43,6 +43,12 @@
                   Créer un évènement
                 <% end %>
               </li>
+              <li class="nav-item">
+                <%= link_to new_admin_user_path, class: "nav-link active" do %>
+                  <span data-feather="file"></span>
+                  Créer un utilisateur
+                <% end %>
+              </li>
             </ul>
 
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
