--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -1,5 +1,64 @@
-<h1>New Admin Event</h1>
+<div class="container">
+  <div class ="row">
+    <div class = "col-md-6 offset-md-3">
+      <br><br><br>
+      <h1 class="h3 mb-3 font-weight-normal text-center">Créer un évènement (admin)</h1>
+    
+      <%= form_tag url_for(action: 'create'), method: "post" do %>
+        <div class="form-group">
+          <label>Titre </label>
+          <%= text_field_tag 'title', @admin_event.title, class: "form-control", placeholder: "Rails BootCamp", type: "text" %>
+          <small id="passwordHelpBlock" class="form-text text-muted">
+          Le titre doit faire 5 caractères minimum, 140 maximum
+          </small>
+        </div>
 
-<%= render 'form', admin_event: @admin_event %>
+        <div class="form-group">
+          <label>Description </label>
+          <%= text_area_tag 'description', @admin_event.description, class: "form-control", placeholder: "Une formation complète pour appréhender les bases de Ruby on Rails.", type: "text" %>
+          <small id="passwordHelpBlock" class="form-text text-muted">
+          La description doit faire 20 caractères minimum, 1000 maximum
+          </small>
+        </div>
 
-<%= link_to 'Back', admin_events_path %>
+        <div class="form-group">
+          <label>Lieu </label>
+          <%= text_field_tag 'location', @admin_event.location, class: "form-control", placeholder: "Paris", type: "text" %>
+        </div>
+
+        <div class="form-group">
+          <label>Date de l'évènement </label>
+          <%= date_field_tag 'start_date', @admin_event.start_date, class: "form-control", placeholder: "DD/MM/YYYY", type: "date" %>
+          <small id="passwordHelpBlock" class="form-text text-muted">
+          La date de l'évènement au format ci-dessus 
+          </small>
+        </div>
+
+        <div class="form-group">
+          <label>Durée de l'évènement </label>
+          <%= text_field_tag 'duration', @admin_event.duration, class: "form-control", placeholder: "60", type: "number" %>
+          <small id="passwordHelpBlock" class="form-text text-muted">
+          La durée est en minutes et doit être un multiple de 5 
+          </small>
+        </div>
+
+        <div class="form-group">
+          <label>Prix de l'évènement </label>
+          <%= text_field_tag 'price', @admin_event.price, class: "form-control", placeholder: "20", type: "number" %>
+          <small id="passwordHelpBlock" class="form-text text-muted">
+          Le prix en euros 
+          </small>
+        </div>
+
+        <div class="actions mt-3 mb-5">
+          <%= submit_tag "Créer évènement", class: "btn btn-lg btn-primary btn-block" %>
+          <div class="text-center mt-3">
+          <%= link_to 'Back', admin_events_path %>
+          </div>
+        </div>
+        
+      <% end %>
+
+    </div>
+  </div>
+</div>
