--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,7 +2,7 @@
   <div class ="row">
     <div class = "col-md-6 offset-md-3">
       <br><br><br>
-      <h1 class="h3 mb-3 font-weight-normal text-center">Créer son évènement</h1>
+      <h1 class="h3 mb-3 font-weight-normal text-center">Modifier l'évènement</h1>
     
       <%= form_tag url_for(action: 'update'), method: "put" do %>
         <div class="form-group">
