--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -31,6 +31,12 @@
                   Evénements <span class="sr-only">(current)</span>
                 <% end %>
               </li>
+              </li>
+              <%= link_to admin_event_submissions_path, class: "nav-link active" do %>
+                  <span data-feather="home"></span>
+                  Evénements en cours de validation
+                <% end %>
+              </li>
               <li class="nav-item">
                 <%= link_to admin_users_path, class: "nav-link active" do %>
                   <span data-feather="file"></span>
@@ -48,39 +54,6 @@
                   <span data-feather="file"></span>
                   Créer un utilisateur
                 <% end %>
-              </li>
-            </ul>
-
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-              <span>Saved reports</span>
-              <a class="d-flex align-items-center text-muted" href="#">
-                <span data-feather="plus-circle"></span>
-              </a>
-            </h6>
-            <ul class="nav flex-column mb-2">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Current month
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Last quarter
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Social engagement
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="file-text"></span>
-                  Year-end sale
-                </a>
               </li>
             </ul>
           </div>
