--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>  
+    <%= render "layouts/header" %>
+    <%= render 'layouts/flash'%>  
     <%= yield %>
     <%= render 'layouts/footer'%>
     
