--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,1 @@
-<div class="container">
-  <div class ="row">
-    <div class = "col-md-6 offset-md-3">
-      <br><br><br>
-
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <h1 class="h3 mb-3 font-weight-normal text-center">Sign up</h1>
-        <div class="form-group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-        </div>
-
-        <div class="actions mt-5">
-          <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block" %>
-        </div>
-      <% end %>
-      <div class="text-center">
-      <%= render "devise/shared/links" %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "new" %>
