--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,52 +1,7 @@
-<% if flash[:success] == "Votre évènement a bien été supprimé" %>
-  <div class="alert alert-success" role="alert">
-    <%= flash[:success] %>
-  </div>
-<% end %>
-<% if flash[:danger] == "Vous n'êtes pas le créateur de cet évènement" || flash[:danger] == "Cet évènement n'est pas encore validé" %>
-  <div class="alert alert-danger" role="alert">
-    <%= flash[:danger] %>
-  </div>
-<% end %>
-
 <main role="main">
 
-  <!-- Main jumbotron for a primary marketing message or call to action -->
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">Eventbrite</h1>
-      <p>Eventbrite est un outil de création, partage et réservation d'évènements dans le monde entier.</p>
-      <p><%= link_to "Crée ton évènement", new_event_path, class: "btn btn-primary btn-lg", role: "button" %></p>
-    </div>
-  </div>
-
-  <div class="container">
-    <!-- Example row of columns -->
-    <% total_row = (@events.size / 3).round(1) %>
-    <% for row in (0..total_row) do%>
-      <div class="row">
-        <div class="col-md-4">
-          <h2><%= @events[row*3].title %></h2>
-          <p><%= @events[row*3].description %></p>
-          <p><%= link_to "Voir les détails", event_path(@events[row*3].id), class: "btn btn-secondary", role: "button" %></p>
-          <% break if row*3 == @events.size - 1 %>
-        </div>
-        <div class="col-md-4">
-          <h2><%= @events[row*3+1].title %></h2>
-          <p><%= @events[row*3+1].description %></p>
-          <p><%= link_to "Voir les détails", event_path(@events[row*3 +   1].id), class: "btn btn-secondary", role: "button" %></p>
-          <% break if row*3+1 == @events.size - 1 %>
-        </div>
-        <div class="col-md-4">
-          <h2><%= @events[row*3+2].title %></h2>
-          <p><%= @events[row*3+2].description %></p>
-          <p><%= link_to "Voir les détails", event_path(@events[row*3+2].id), class: "btn btn-secondary", role: "button" %></p>
-          <% break if row*3+2 == @events.size - 1 %>
-        </div>
-      </div>
-    <% end %>
-    <hr>
-
-  </div> <!-- /container -->
+  
+  <%= render 'banner'%>
+  <%= render 'index'%>
 
 </main>
