--- a/app/views/events/_banner.html.erb
+++ b/app/views/events/_banner.html.erb
@@ -2,7 +2,7 @@
   <div class="jumbotron" style="background-image: url(https://tbaevents.no/wp-content/uploads/2019/05/festival-1-1340x600.jpg); height: 500px;">
     <div class="container">
       <h1 class="display-3">Eventbrite</h1>
-      <p>Eventbrite est un outil de création, partage et réservation d'évènements dans le monde entier.</p>
-      <p><%= link_to "Crée ton évènement", new_event_path, class: "btn btn-primary btn-lg", role: "button" %></p>
+      <p>Eventbrite is a tool to create, share and book events all around the world.</p>
+      <p><%= link_to "Create event", new_event_path, class: "btn btn-primary btn-lg", role: "button" %></p>
     </div>
   </div>
