--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,69 +1,1 @@
-<div class="container">
-  <div class ="row">
-    <div class = "col-md-6 offset-md-3">
-      <br><br><br>
-      
-      <h1 class="h3 mb-3 font-weight-normal text-center">Détails de l'évènement - <%= @event.title%></h1>
-        <div class="text-center mb-5">
-        <% if user_admin?(@event) == true %>
-          <%if @event.event_picture.attached?%>
-            <%= image_tag @event.event_picture, alt: 'event_picture', align: 'middle', width: 570, height: 400 %>
-          <%else%>
-            <p>=== Il n'y a pas encore d'image lié à cet évènement ===</p>
-          <%end%>
-          <h3 class="mt-5 h5 font-weight-normal">Changer l'image de couverture ?</h3>
-          <%= form_tag event_event_pictures_path(@event), multipart: true do %>
-            <%= file_field_tag :event_picture %>
-            <%= submit_tag "Mettre à jour" %>
-          <% end %>
-        <% end %>
-        </div>  
-      
-      <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <%= @event.description%>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Nombre d'inscrits
-          <span class="badge badge-primary badge-pill"><%= @event.users.count %></span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Créé par <%= @event.admin.email %>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Commence le <%= @event.start_date %>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Termine le <%= @event.end_date %>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Lieu: <%= @event.location %>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Coût: <%= @event.price %>€
-        </li>
-      </ul>
-
-      <% if user_signed_in? %>
-        <% if user_registered?(@event) == false && user_admin?(@event) == false %>
-        <h2 class="h5 mb-3 mt-5 font-weight-normal text-center">Vous souhaitez participer à l'évènement ?</h2>
-        
-          <%= form_for :attendance, url: new_event_attendance_path(@event.id), method: "get" do |f| %>
-            <%= f.hidden_field :event_id, value: @event.id %>
-            <div class="text-center">
-            <%= f.submit 'Rejoindre évènement', class: "btn btn-md btn-primary" %>
-            </div>
-          <% end %>
-        <% end %>
-
-        <% if current_user == @event.admin %>
-          <div class="text-center mt-5">
-          <%= link_to "Mon espace évènement", event_attendances_path(@event.id), class: "btn btn-md btn-primary" %>          
-          </div>
-        <% end %>
-
-      <% end %>
-
-
-    </div>
-  </div>
+<%= render "show" %>
