--- a/app/views/admin/event_submissions/index.html.erb
+++ b/app/views/admin/event_submissions/index.html.erb
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Dashboard Eventbrite - Evénements en cours de validation</title>
+    <title>Dashboard Eventbrite - Events under validation</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
 
@@ -28,30 +28,30 @@
               <li class="nav-item">
                 <%= link_to admin_events_path, class: "nav-link active" do %>
                   <span data-feather="home"></span>
-                  Evénements <span class="sr-only">(current)</span>
+                  Events <span class="sr-only">(current)</span>
                 <% end %>
               </li>
               <%= link_to admin_event_submissions_path, class: "nav-link active" do %>
                   <span data-feather="home"></span>
-                  Evénements en cours de validation
+                  Events under validation
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to admin_users_path, class: "nav-link active" do %>
                   <span data-feather="file"></span>
-                  Utilisateurs
+                  Users
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to new_admin_event_path, class: "nav-link active" do %>
                   <span data-feather="file"></span>
-                  Créer un évènement
+                  Create event
                 <% end %>
               </li>
               <li class="nav-item">
                 <%= link_to new_admin_user_path, class: "nav-link active" do %>
                   <span data-feather="file"></span>
-                  Créer un utilisateur
+                  Create user
                 <% end %>
               </li>
             </ul>
@@ -60,13 +60,13 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
 
-          <h2>Evènements en cours de validation</h2>
+          <h2>Events under validation</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>Titre</th>
-                  <th>Editer</th>
+                  <th>Title</th>
+                  <th>Edit</th>
                 </tr>
               </thead>
               <tbody>
