--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -2,68 +2,68 @@
   <div class ="row">
     <div class = "col-md-6 offset-md-3">
       <br><br><br>
-      <h1 class="h3 mb-3 font-weight-normal text-center">Modifier l'évènement (Admin)</h1>
+      <h1 class="h3 mb-3 font-weight-normal text-center">Modify event (Admin)</h1>
     
-      <%= form_tag url_for(action: 'update'), method: "put" do %>
+      <%= form_tag event_path(@admin_event.id), method: "patch" do %>
         <div class="form-group">
-          <label>Titre </label>
+          <label>Title </label>
           <%= text_field_tag 'title', @admin_event.title, class: "form-control", placeholder: "Rails BootCamp", type: "text" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          Le titre doit faire 5 caractères minimum, 140 maximum
+          The title must be 5 characters minimum, 140 maximum
           </small>
         </div>
 
         <div class="form-group">
           <label>Description </label>
-          <%= text_area_tag 'description', @admin_event.description, class: "form-control", placeholder: "Une formation complète pour appréhender les bases de Ruby on Rails.", type: "text" %>
+          <%= text_area_tag 'description', @admin_event.description, class: "form-control", placeholder: "Complete training to understand the basics of Ruby on Rails.", type: "text" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          La description doit faire 20 caractères minimum, 1000 maximum
+          Description must be 20 characters minimum, 1000 maximum
           </small>
         </div>
 
         <div class="form-group">
-          <label>Lieu </label>
+          <label>Location </label>
           <%= text_field_tag 'location', @admin_event.location, class: "form-control", placeholder: "Paris", type: "text" %>
         </div>
 
         <div class="form-group">
-          <label>Date de l'évènement </label>
+          <label>Event date </label>
           <%= date_field_tag 'start_date', @admin_event.start_date, class: "form-control", placeholder: "DD/MM/YYYY", type: "date" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          La date de l'évènement au format ci-dessus 
+          The date of the event in the above format
           </small>
         </div>
 
         <div class="form-group">
-          <label>Durée de l'évènement </label>
+          <label>Duration of the event</label>
           <%= text_field_tag 'duration', @admin_event.duration, class: "form-control", placeholder: "60", type: "number" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          La durée est en minutes et doit être un multiple de 5 
+          Duration is in minutes and must be a multiple of 5
           </small>
         </div>
 
         <div class="form-group">
-          <label>Prix de l'évènement </label>
+          <label>Event price </label>
           <%= text_field_tag 'price', @admin_event.price, class: "form-control", placeholder: "20", type: "number" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          Le prix en euros 
+          Price in euros 
           </small>
         </div>
 
         <div class="form-group"> 
-          <label>Validation de l'évènement</label><br>
-          <%= select_tag "validated", raw("<option value=''>Validation en cours</option><option value='1'>Validé</option><option value='0'>Non validé</option>") %>
+          <label>Validation of the event</label><br>
+          <%= select_tag "validated", raw("<option value=''>Under validation</option><option value='1'>Validated</option><option value='0'>Not validated</option>") %>
         </div>
 
         <div class="actions mt-3 mb-5">
-          <%= submit_tag "Modifier évènement", class: "btn btn-lg btn-primary btn-block" %>
+          <%= submit_tag "Modify event", class: "btn btn-lg btn-primary btn-block" %>
         </div>
         
       <% end %>
 
-      <h2 class="h5 mb-3 mt-5 font-weight-normal text-center">Vous souhaitez supprimer cet évènement ?</h2>
+      <h2 class="h5 mb-3 mt-5 font-weight-normal text-center">You want to delete this event?</h2>
       <div class="  text-center">
-      <%= link_to "Supprimer évènement", event_path(@admin_event.id), class: "btn btn-md btn-danger mb-5", method: "delete" %>
+      <%= link_to "Delete event", event_path(@admin_event.id), class: "btn btn-md btn-danger mb-5", method: "delete", data: { confirm: 'Are you sure you want to delete this event?' } %>
       </div>
 
 
