--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,35 +1,34 @@
 <div class="container">
   <div class ="row">
-    <div class = "col-md-6 offset-md-3">
+    <div class = "col-md-6 offset-md-3 text-center">
       <br><br><br>
-      <h1 class="h3 mb-3 font-weight-normal text-center"> Inscription et règlement de l'évènement </h1>
+      <h1 class="h3 mb-3 font-weight-normal"> Registration and payment of the event </h1>
 
       <%= form_tag event_attendances_path(@event_id) do %>
-        <article class="text-center">
+      <div class="text-center">
+        <article style="width: 540px">
           <% if flash[:error].present? %>
             <div id="error_explanation">
               <p><%= flash[:error] %></p>
             </div>
           <% end %>
-          <label class="amount">
-            <span>Amount: <%= @price %></span>
+          <label class="amount mt-3">
+            <span>Amount to pay: <%= @price %> €</span>
           </label>
         </article>
 
         <%= hidden_field_tag 'price', @price %>
         <%= hidden_field_tag 'event_id', @event_id %>
         
-        <div class="text-center">
+        <div class="text-center" style="width: 540px">
         <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                 data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                data-description="Inscription à l'évènement"
+                data-description="Registration in the event"
                 data-amount=<%= @price * 100 %>
                 data-locale="auto"></script>
         </div>
+      </div>
       <% end %>
-
-
-
 
     </div>
   </div>
