--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,7 +4,7 @@
       <br><br><br>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }, class: "form-signin mt-3") do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= devise_error_messages! %>
         <%= f.hidden_field :reset_password_token %>
         <h1 class="h3 mb-3 font-weight-normal text-center">Change your password</h1>
 
@@ -21,14 +21,12 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
 
-        <div class="actions mt-3">
+        <div class="actions mt-3 text-center">
           <%= f.submit "Change my password", class: "btn btn-lg btn-primary btn-block mb-3" %>
+          <br>
+          <%= render "devise/shared/links" %>
         </div>
       <% end %>
-
-      <div class = "text-center">
-      <%= render "devise/shared/links" %>
-      </div>
       
     </div>
   </div>
