--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -3,8 +3,8 @@
     <div class = "col-md-6 offset-md-3">
       <br><br><br>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin mt-3") do |f| %>
+        <%= devise_error_messages! %>
         <h1 class="h3 mb-3 font-weight-normal text-center">Sign up</h1>
         <div class="form-group">
           <%= f.label :email %><br />
@@ -24,13 +24,12 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
 
-        <div class="actions mt-5">
+        <div class="actions mt-5 text-center">
           <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block" %>
+          <br>
+          <%= render "devise/shared/links" %>
         </div>
       <% end %>
-      <div class="text-center">
-      <%= render "devise/shared/links" %>
-      </div>
     </div>
   </div>
 </div>
