--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
       <br><br><br>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin mt-3", html: { method: :put }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= devise_error_messages! %>
         <h1 class="h3 mb-3 font-weight-normal text-center">Edit <%= resource_name.to_s.humanize %></h1>
         <div class="form-group">
           <%= f.label :email %><br />
@@ -34,17 +34,21 @@
           <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
         </div>
 
-        <div class="actions mt-3">
+        <div class="actions mt-3 mb-5">
           <%= f.submit "Update", class: "btn btn-lg btn-primary btn-block mb-3" %>
         </div>
       <% end %>
-
       
-      <h1 class="h3 mb-3 font-weight-normal text-center ">Cancel my account</h1>
-      <div class="form-group text-center">
-      <p class="text-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
-      <%= link_to "Back", :back %>
+      <div class="form-group text-center" style="width:600px">
+        <h1 class="h3 mb-3 font-weight-normal text-center">Cancel my account</h1>
+        
+        <p class="text-center">Unhappy? </p>
+        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure you want to cancel your account?" }, method: :delete, class: "btn btn-danger" %>
+        <br>
+        <br>
+        <%= link_to "Back", :back %>
       </div>
+
     </div>
   </div>
 </div>
