--- a/app/views/events/_edit.html.erb
+++ b/app/views/events/_edit.html.erb
@@ -2,11 +2,11 @@
   <div class ="row">
     <div class = "col-md-6 offset-md-3">
       <br><br><br>
-      <h1 class="h3 mb-3 font-weight-normal text-center">Create your event</h1>
+      <h1 class="h3 mb-3 font-weight-normal text-center">Edit Event</h1>
     
-      <%= form_tag url_for(action: 'create'), method: "post" do %>
+      <%= form_tag url_for(action: 'update'), method: "put" do %>
         <div class="form-group">
-          <label>Title </label>
+          <label>Titre </label>
           <%= text_field_tag 'title', @event.title, class: "form-control", placeholder: "Rails BootCamp", type: "text" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
           The title must be 5 characters minimum, 140 maximum
@@ -15,46 +15,52 @@
 
         <div class="form-group">
           <label>Description </label>
-          <%= text_area_tag 'description', @event.description, class: "form-control", placeholder: "Complete training to be a master on Ruby on Rails.", type: "text" %>
+          <%= text_area_tag 'description', @event.description, class: "form-control", placeholder: "Complete training to understand the basics of Ruby on Rails.", type: "text" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
           Description must be 20 characters minimum, 1000 maximum
           </small>
         </div>
 
         <div class="form-group">
-          <label>Location </label>
+          <label>Lieu </label>
           <%= text_field_tag 'location', @event.location, class: "form-control", placeholder: "Paris", type: "text" %>
         </div>
 
         <div class="form-group">
-          <label>Event date </label>
+          <label>Date de l'évènement </label>
           <%= date_field_tag 'start_date', @event.start_date, class: "form-control", placeholder: "DD/MM/YYYY", type: "date" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          The date of the event in the above format
+          The date of the event in the above format 
           </small>
         </div>
 
         <div class="form-group">
-          <label>Event duration</label>
+          <label>Durée de l'évènement </label>
           <%= text_field_tag 'duration', @event.duration, class: "form-control", placeholder: "60", type: "number" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          Duration is in minutes and must be a multiple of 5 
+          Duration is in minutes and must be a multiple of 5
           </small>
         </div>
 
         <div class="form-group">
-          <label>Event price </label>
+          <label>Prix de l'évènement </label>
           <%= text_field_tag 'price', @event.price, class: "form-control", placeholder: "20", type: "number" %>
           <small id="passwordHelpBlock" class="form-text text-muted">
-          Price in euros
+          The price in euros
           </small>
         </div>
 
         <div class="actions mt-3 mb-5">
-          <%= submit_tag "Create event", class: "btn btn-lg btn-primary btn-block" %>
+          <%= submit_tag "Edit event", class: "btn btn-lg btn-primary btn-block" %>
         </div>
         
       <% end %>
+
+      <h2 class="h5 mb-3 mt-5 font-weight-normal text-center">Do you want to delete this event?</h2>
+      <div class="  text-center">
+      <%= link_to "Delete event", event_path(@event.id), class: "btn btn-md btn-danger mb-5", data: { confirm: "Are you sure you want to delete this event?" }, ethod: "delete" %>
+      </div>
+
 
     </div>
   </div>
