--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <!-- Footer -->
-        <footer class="page-footer font-small blue pt-4">
+        <footer class="footer page-footer font-small blue pt-4">
 
           <!-- Footer Links -->
-          <div class="container-fluid text-center text-md-left">
+          <div class="container-fluid text-center text-md-left mt-5">
             <!-- Grid row -->
             <div class="row">
               <!-- Grid column -->
@@ -24,13 +24,10 @@
         
                 <ul class="list-unstyled">
                   <li>
-                    <a href="#!">Créer un évènement</a>
+                    <%= link_to "Create event", new_event_path %>
                   </li>
                   <li>
-                    <a href="#!">Voir mon profil</a>
-                  </li>
-                  <li>
-                    <a href="#!">Gérer les évènements</a>
+                     <%= link_to "Show all events", root_path %>
                   </li>
                 </ul>
         
@@ -41,7 +38,7 @@
               <div class="col-md-3 mb-md-0 mb-3">
         
                 <!-- Links -->
-                <!--<h5 class="text-uppercase">Links</h5>-->
+                <h5 class="text-uppercase">Société</h5>
         
                 <ul class="list-unstyled">
                   <li>
@@ -51,10 +48,10 @@
                     <a href="#!">FAQ</a>
                   </li>
                   <li>
-                    <a href="#!">Nous contacter</a>
+                    <a href="#!">Contact Us</a>
                   </li>
                   <li>
-                    <a href="#!">A propos</a>
+                    <a href="#!">About</a>
                   </li>
                 </ul>
         
