--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -68,7 +68,7 @@
                 <tr>
                   <th>Title</th>
                   <th></th>
-                  <th></th>
+                  <th>Show</th>
                   <th>Delete</th>
                   <th>Admin?</th>
                 </tr>
@@ -78,7 +78,7 @@
                 <tr>
                   <td><%= admin_user.first_name %></td>
                   <td></td>
-                  <td></td>
+                  <td><%= link_to 'Show', admin_user%></td>
                   <td><%= link_to 'Destroy', admin_user, method: :delete, data: { confirm: 'Are you sure you want to delete this user?' } %></td>
                   <td><%= admin_user.is_admin %></td>
 
